--- a/support_enumeration/support_enumeration_py.ipynb
+++ b/support_enumeration/support_enumeration_py.ipynb
@@ -1402,15 +1402,394 @@
     "The following is just one possible implementation design:\n",
     "\n",
     "* The arguments are\n",
-    "  * payoff matrix `a`;\n",
-    "  * support `I` of the player in consideration;\n",
-    "  * support `J` of the opponent player;\n",
-    "  * array `out` that stores the candidate mixed action.\n",
-    "* If there is a mixed action of the opponent with support `J`\n",
-    "  against which the actions in `I` are best responses,\n",
+    "  * numpy array `payoff_matrix`;\n",
+    "  * list (or numpy array) `own_supp` for the support of the player in consideration;\n",
+    "  * list (or numpy array) `opp_supp` for the support of the opponent player;\n",
+    "  * numpy array `out` that stores the candidate mixed action.\n",
+    "* If there is a mixed action of the opponent with support `opp_supp`\n",
+    "  against which the actions in `own_supp` are best responses,\n",
     "  then return `True`; otherwise return `False`.\n",
     "  In the former case, the mixed action is stored in `out`.\n",
     "* Array `out` must be of length equal to the number of the opponent's actions."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "def indiff_mixed_action(payoff_matrix, own_supp, opp_supp, out):\n",
+    "    # (number of own actions, number of opponent's actions)\n",
+    "    nums_actions = payoff_matrix.shape\n",
+    "    \n",
+    "    # Support size\n",
+    "    k = len(own_supp)\n",
+    "    \n",
+    "    # Matrix in the left hand side of the linear equation\n",
+    "    a = np.empty((k+1, k+1))\n",
+    "    a[:-1, :-1] = payoff_matrix[own_supp, :][:, opp_supp]\n",
+    "    a[-1, :-1] = 1\n",
+    "    a[:-1, -1] = -1\n",
+    "    a[-1, -1] = 0\n",
+    "    \n",
+    "    # Vector in the right hand side of the linear equation\n",
+    "    b = np.zeros(k+1)\n",
+    "    b[-1] = 1\n",
+    "    \n",
+    "    try:\n",
+    "        sol = np.linalg.solve(a, b)\n",
+    "    except np.linalg.LinAlgError:\n",
+    "        return False\n",
+    "    \n",
+    "    # Return False immediately if any of the \"probabilities\" is not positive\n",
+    "    if (sol[:-1] <= 0).any():\n",
+    "        return False\n",
+    "    \n",
+    "    own_supp_c = np.setdiff1d(np.arange(nums_actions[0]), own_supp)\n",
+    "    # Return False immediately if the solution mixed action is not optimal\n",
+    "    if (sol[-1] < payoff_matrix[own_supp_c, :][:, opp_supp] @ sol[:-1]).any():\n",
+    "        return False\n",
+    "    \n",
+    "    out.fill(0)\n",
+    "    out[opp_supp] = sol[:-1]\n",
+    "    return True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "I = [0, 1]\n",
+    "J = [0, 1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "out = np.empty(n)\n",
+    "indiff_mixed_action(A, I, J, out)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0.66666667,  0.33333333])"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "out"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "out = np.empty(m)\n",
+    "indiff_mixed_action(B_T, J, I, out)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0.8,  0.2,  0. ])"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "out"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "I = [0, 2]\n",
+    "J = [0, 1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "out = np.empty(n)\n",
+    "indiff_mixed_action(A, I, J, out)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "out = np.empty(m)\n",
+    "indiff_mixed_action(B_T, J, I, out)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Note on the `try`-`except` block:\n",
+    "\n",
+    "There are cases where the coeffiecient matrix in the linear equation is singular,\n",
+    "in which case `np.linalg.solve(a, b)` raises an error [`linalg.LinAlgError`](http://docs.scipy.org/doc/numpy/reference/generated/numpy.linalg.LinAlgError.html).\n",
+    "For example:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "ename": "LinAlgError",
+     "evalue": "Singular matrix",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mLinAlgError\u001b[0m                               Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-56-7761d3de4fed>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlinalg\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msolve\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mzeros\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mones\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m//anaconda/lib/python3.5/site-packages/numpy/linalg/linalg.py\u001b[0m in \u001b[0;36msolve\u001b[0;34m(a, b)\u001b[0m\n\u001b[1;32m    382\u001b[0m     \u001b[0msignature\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'DD->D'\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0misComplexType\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mt\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32melse\u001b[0m \u001b[0;34m'dd->d'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    383\u001b[0m     \u001b[0mextobj\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mget_linalg_error_extobj\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0m_raise_linalgerror_singular\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 384\u001b[0;31m     \u001b[0mr\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mgufunc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mb\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msignature\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0msignature\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mextobj\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mextobj\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    385\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    386\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mwrap\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mr\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mastype\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mresult_t\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcopy\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m//anaconda/lib/python3.5/site-packages/numpy/linalg/linalg.py\u001b[0m in \u001b[0;36m_raise_linalgerror_singular\u001b[0;34m(err, flag)\u001b[0m\n\u001b[1;32m     88\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     89\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0m_raise_linalgerror_singular\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0merr\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mflag\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 90\u001b[0;31m     \u001b[0;32mraise\u001b[0m \u001b[0mLinAlgError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Singular matrix\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     91\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     92\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0m_raise_linalgerror_nonposdef\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0merr\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mflag\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mLinAlgError\u001b[0m: Singular matrix"
+     ]
+    }
+   ],
+   "source": [
+    "np.linalg.solve(np.zeros((2, 2)), np.ones(2))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "If this happens, the program stops.\n",
+    "But singularity just implies that there is no Nash equilibrium for the given support pair,\n",
+    "so we want to just return `False` without stopping the program.\n",
+    "A `try`-`except` statement can be used for this purpose;\n",
+    "see [this section](https://docs.python.org/3.5/tutorial/errors.html#handling-exceptions)\n",
+    "in the Python tutorial."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Main loop"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In the final step,\n",
+    "we need a loop interating over all the equal-size support pairs\n",
+    "in which `indiff_mixed_action` is applied to each pair."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "One approach is to use [`itertools.combinations`](https://docs.python.org/3.5/library/itertools.html#itertools.combinations):"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import itertools"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "((0, 1), (0, 1))\n",
+      "((0, 1), (0, 2))\n",
+      "((0, 1), (1, 2))\n",
+      "((0, 2), (0, 1))\n",
+      "((0, 2), (0, 2))\n",
+      "((0, 2), (1, 2))\n",
+      "((1, 2), (0, 1))\n",
+      "((1, 2), (0, 2))\n",
+      "((1, 2), (1, 2))\n"
+     ]
+    }
+   ],
+   "source": [
+    "m, n = 3, 3\n",
+    "k = 2\n",
+    "for I in itertools.combinations(range(m), k):\n",
+    "    for J in itertools.combinations(range(n), k):\n",
+    "        print((I, J))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Question"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Consider the $6 \\times 6$ game from\n",
+    "von Stengel (1997)\n",
+    "\"[New Lower Bounds for the Number of Equilibria in Bimatrix Games](http://www.maths.lse.ac.uk/personal/stengel/TEXTE/264.pdf),\" page 12:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "A = np.array(\n",
+    "    [[    9504,     -660,    19976,   -20526,     1776,    -8976],\n",
+    "     [ -111771,    31680,  -130944,   168124,    -8514,    52764],\n",
+    "     [  397584,  -113850,   451176,  -586476,    29216,  -178761],\n",
+    "     [  171204,   -45936,   208626,  -263076,    14124,   -84436],\n",
+    "     [ 1303104,  -453420,  1227336, -1718376,    72336,  -461736],\n",
+    "     [  737154,  -227040,   774576, -1039236,    48081,  -300036]]\n",
+    ")\n",
+    "B_T = np.array(\n",
+    "    [[   72336,  -461736,  1227336, -1718376,  1303104,  -453420],\n",
+    "     [   48081,  -300036,   774576, -1039236,   737154,  -227040],\n",
+    "     [   29216,  -178761,   451176,  -586476,   397584,  -113850],\n",
+    "     [   14124,   -84436,   208626,  -263076,   171204,   -45936],\n",
+    "     [    1776,    -8976,    19976,   -20526,     9504,     -660],\n",
+    "     [   -8514,    52764,  -130944,   168124,  -111771,    31680]]\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Count the number of Nash equilibria of this game."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Background:\n",
+    "\n",
+    "The $n \\times n$ game where the payoff matrices are given by the identy matrix has $2^n - 1$ equilibria.\n",
+    "It had been conjectured by Quint and Shubik (1997) that this is the maximum number of equilibria\n",
+    "of any nondegenerate game.\n",
+    "The game above was presented as a counter-example to this conjecture."
    ]
   },
   {
@@ -1425,9 +1804,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [Root]",
    "language": "python",
-   "name": "python3"
+   "name": "Python [Root]"
   },
   "language_info": {
    "codemirror_mode": {
