--- a/hw02.md
+++ b/hw02.md
@@ -5,7 +5,9 @@ Homework 2
   and run it for several example games on a Jupyter notebook
   (see [this](http://lectures.quantecon.org/py/getting_started.html#jupyter) for Python
   or [this](http://lectures.quantecon.org/jl/getting_started.html#jupyter) for Julia).
-  
-* Create a repository on GitHub, and push your Jupyter notebook to it.  
+
+* Create a repository on GitHub, and push your Jupyter notebook to it.
   Create (or edit) a "README.md" file in your repository,
   and in that file, make a [nbviewer](http://nbviewer.jupyter.org) link to your notebook.
+
+[Hints](http://nbviewer.jupyter.org/github/oyamad/theory16/blob/master/support_enumeration/support_enumeration_py.ipynb)
