support_enumeration_py solutions

--- a/hw02.md
+++ b/hw02.md
@@ -10,4 +10,4 @@ Homework 2
   Create (or edit) a "README.md" file in your repository,
   and in that file, make a [nbviewer](http://nbviewer.jupyter.org) link to your notebook.
 
-[Hints and exercises](http://nbviewer.jupyter.org/github/oyamad/theory16/blob/master/support_enumeration/support_enumeration_py.ipynb)
+[Suggested solutions](http://nbviewer.jupyter.org/github/oyamad/theory16/blob/supp_enum_solution/support_enumeration/support_enumeration_py.ipynb)
