--- a/support_enumeration/support_enumeration_py.ipynb
+++ b/support_enumeration/support_enumeration_py.ipynb
@@ -1096,7 +1096,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "(`y` is the same as `y_J` because $J = M$,\n",
+    "(`y` is the same as `y_J` because $J = N$,\n",
     "but let's make the code general.)"
    ]
   },
@@ -1815,7 +1815,7 @@
     "Note on the `try`-`except` block:\n",
     "\n",
     "There are cases where the coeffiecient matrix in the linear equation is singular,\n",
-    "in which case `np.linalg.solve(a, b)` raises an error [`linalg.LinAlgError`](http://docs.scipy.org/doc/numpy/reference/generated/numpy.linalg.LinAlgError.html).\n",
+    "in which case `np.linalg.solve(a, b)` raises an error [`np.linalg.LinAlgError`](http://docs.scipy.org/doc/numpy/reference/generated/numpy.linalg.LinAlgError.html).\n",
     "For example:"
    ]
   },
@@ -2083,7 +2083,7 @@
     "\n",
     "The $n \\times n$ game where the payoff matrices are given by the identy matrix has $2^n - 1$ equilibria.\n",
     "It had been conjectured by Quint and Shubik (1997) that this is the maximum number of equilibria\n",
-    "of any nondegenerate game.\n",
+    "of any nondegenerate $n \\times n$ game.\n",
     "The game above was presented as a counter-example to this conjecture."
    ]
   },
