--- a/hw02.md
+++ b/hw02.md
@@ -8,6 +8,6 @@ Homework 2
 
 * Create a repository on GitHub, and push your Jupyter notebook to it.
   Create (or edit) a "README.md" file in your repository,
-  and in that file, make a [nbviewer](http://nbviewer.jupyter.org) link to your notebook.
+  and in that file, make an [nbviewer](http://nbviewer.jupyter.org) link to your notebook.
 
-[Suggested solutions](http://nbviewer.jupyter.org/github/oyamad/theory16/blob/supp_enum_solution/support_enumeration/support_enumeration_py.ipynb)
+[Suggested solutions](http://nbviewer.jupyter.org/github/oyamad/theory16/blob/master/support_enumeration/support_enumeration_py.ipynb)
