--- a/hw03.md
+++ b/hw03.md
@@ -7,4 +7,4 @@ Homework 3
 * Push your Jupyter notebook to a GitHub repository, and
   in the "README.md" file, make an [nbviewer](http://nbviewer.jupyter.org) link to your notebook.
 
-[Hints](http://nbviewer.jupyter.org/github/oyamad/theory16/blob/master/lemke_howson/lemke_howson_py.ipynb)
+[Suggested solutions](http://nbviewer.jupyter.org/github/oyamad/theory16/blob/master/lemke_howson/lemke_howson_py.ipynb)
