--- a/hw04.md
+++ b/hw04.md
@@ -7,3 +7,5 @@ Homework 4
 
 * Push your Jupyter notebook to a GitHub repository, and
   in the "README.md" file, make an [nbviewer](http://nbviewer.jupyter.org) link to your notebook.
+
+[Suggested solutions](http://nbviewer.jupyter.org/github/oyamad/theory16/blob/master/lemke_howson/mclennan_tourky_py.ipynb)
